# archionkarte-20

./: CHANGELOG.md  LICENSE  README.md  archion_scraping.py  geojson sorting.py  gitignore  main.py  output.py  pyproject.toml  requirements-dev.txt  requirements.txt
archionkarte/: __init__.py  main.py  output.py  preprocessing.py
data/: geojson sorting.py
data/geojson/: baden.json  bayern.json  bistum_hildesheim.json  bistum_speyer.json  blieskastel.json  hannover.json  hessen_nassau.json  land_koblenz.json  land_speyer.json  lippe.json  magdeburg.json  mennoniten.json  nordkirche.json  offline.json  ostgebiete.json  pfalz.json  westfalen.json
data/geojson_sorted/: anhalt_sorted.json  baden_sorted.json  bayern_sorted.json  bistum_hildesheim_sorted.json  bistum_speyer_sorted.json  braunschweig_sorted.json  bremen_sorted.json  eisenach_sorted.json  ekbo_sorted.json  hannover_sorted.json  (+18 more)
geojson/: anhalt.json  braunschweig.json  eisenach.json  ekbo.json  hannover_reform.json  kurhessen_waldeck.json  land_niedersachsen.json  nordkirche.json  offline.json  oldenburg.json  rheinland.json  sachsen.json  württemberg.json
geojson_sorted/: anhalt_sorted.json  baden_sorted.json  bayern_sorted.json  braunschweig_sorted.json  eisenach_sorted.json  hannover_sorted.json  hessen_nassau_sorted.json  land_koblenz_sorted.json  land_niedersachsen_sorted.json  land_speyer_sorted.json  lippe_sorted.json  magdeburg_sorted.json  nordkiche_sorted.json  nordkirche_sorted.json  oldenburg_sorted.json  ostgebiete_sorted.json  trier_sorted.json  westfalen_sorted.json  württemberg_sorted.json
